fixed codeblocks shrinking on mobile

--- a/styles/textStyles.css
+++ b/styles/textStyles.css
@@ -32,6 +32,7 @@ pre div {
     border-radius: 3px;
     box-shadow: 0 10px 15px #0000001c;
     cursor: pointer;
+    width: 100%;
 }
 
 
